style/dashboard.css
@import url('https://fonts.googleapis.com/css?family=Mulish');

* {
  font-family: 'Mulish', sans-serif;
}

.bg-red {
  background-color: red !important;
}

.bg-blue {
  background-color: turquoise !important;
}

.bg-green {
  background-color: green !important;
}

html {
  width: 100%;
  height: 100%;
}

body {
  background-color: #F1F7F8;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 1.5% 1.5% 1.5% 1.5%;
}

.container-main {
  height: 100%;
  max-width: 79%;
}

.container-right {
  display: grid;
  float: right;
  height: 100%;
  width: 20%;
}

.calendar {
  max-height: 100%;
  background-color:  #88bbd8;
  height: 92%;
  border-radius: 20px;
}

.calendar_top {
  height: 7%;
  width: 100%;
  padding: 2px 2px 2px 2px;
  color: white;
  display: flex;
	align-items: center;
}

.calendar_main {
  border-radius: 20px;
  height: 91%;
  overflow-x: hidden;
  overflow-y: auto;
}

.calendar_day {
  color: #003F61;
  background-color: #88bbd8;
  
  width: 25px;
  height: 25px;
  font-size: 14px;

  display: flex;
	align-items: center;
	justify-content: center;
  
  float: right;
  border-radius: 50%;
}

.calendar_month {
  background-color: white;
  color: #003F61;
  border-radius: 20px;
  float: top;
  width: 120px;
  display: flex;
	align-items: center;
	justify-content: center;
  height: 30px;
  margin-left: 1%;
  font-size: large;
}

.timetable {
  padding: 7px 5px;
  margin-top: 40%;
  background-color: rgba(183, 0, 255, 0.637);
  border-radius: 15px;
  color: white;
  font-size: 12px;
  color: black;
}

table {
  border-radius: 20px;
  border-spacing: 10;
  border: 5;
  border-color: #F1F7F8;
  height: 92%;
  width: 100%;
  float: bottom;
  table-layout: fixed;
}

th {
  background-color: white;
  border-radius: 20px;
  height: 5%;
  width: 8%;
  color: #003F61;
}

.nav-btn {
  width: 18px !important;
  margin-left: 10px;
}

td {
  background-color: white;
  border-radius: 15px;
  padding: 5px 5px 5px 5px;
  width: 20px;
  vertical-align: top;
}

.tableFixHead {
  overflow-y: auto;
  height: 100%;
}
.tableFixHead thead th {
  position: sticky;
  top: 0;
}

.banner {
  display: flex;
  width: 100%;
  height: 7%;

  border-radius: 20px;
  background-color: #003F61;
  margin-bottom: 1%;
  align-items: center;
  justify-content: space-between;
}

.banner-left {
  display: flex;
  height: 100%;
  width: 40% !important;
  align-items: center;
  padding-left: 10px;
}

.banner-right {
  display: flex;
  padding-right: 12px;
}

.homebutton {
  margin-left: 1%;
  padding: 0.2%;
  width: 35px;
}

.class {
  width: 90%;
  height: 65%;
  font-size: 25px;

  padding: 1px 1px 1px 1px ;
  margin: 0.6% 3%;
  
  color: #003F61;
  background-color: white;
  border-radius: 20px;
  
  display: flex;
	align-items: center;
	justify-content: center; 
}

.klausur {
  border-radius: 20px;
  background-color: #003F61;
  padding: 0.3%;
  color: #003F61;
  margin-bottom: 4%;
  padding: 4% 4% 4% 4%;
}

.klausuren_top {
  width: 100%;
  height: 60px;
  background-color: white;
  border-radius: 20px;
  display: flex;
	align-items: center;
	justify-content: center;
  margin-bottom: 10%;
}

.klausuren_main {
  margin-top: 1%;
  height: 0%;
}

.termine_main {
  margin-top: 1%;
  height: 0%;
}

.termine {
  border-radius: 20px;
  background-color: #003F61;
  padding: 0.3%;
  color: #003F61;
  padding: 4% 4% 4% 4%;
}

.termine_top {
  width: 100%;
  height: 60px;
  background-color: white;
  border-radius: 20px;
  display: flex;
	align-items: center;
	justify-content: center;
  margin-bottom: 10%;
}

.label_text {
  font-size: 250%;
}

.dropdown {
  display: flex;
  flex-direction: column;
  position: relative;
}

.dropbtn {
  background-color: white;
  color: #003F61;
  border: none;
  border-radius: 10px;
  
  display: block;
  max-width: 300%;
  
  font-size: 16px;
  cursor: pointer;
  
  padding: 5px 10px 5px 5px;
}

.dropdown-content {
  display: none;
  position: absolute;

  background-color: #f9f9f9;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  border-radius: 10px;
  
  min-width: 125px;
  z-index: 1;
  
  padding: 5px 0px 5px 5px;
}

.dropdown-content a {
  color: #003F61;
  text-decoration: none;
  display: block;
}

.dropdown-content hr {
  background-color: #003F61;
  border: none;
  width: inherit;
  height: 1px;
  margin-right: 10px;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  background-color: white;
}

.date-btn:hover {
  filter: brightness(90%);
}

details > p {
  padding-left: 5px;
}

summary{
  padding-left: 5px;
  font-weight: bold;
  color: #003F61; 
  list-style: none;
  cursor: pointer;
}


@media only screen and (max-width: 1000px) {
  .label_text {
    font-size: 140%;
  }
  th {
    font-size: 10px;
  }
}

@media only screen and (max-width: 800px) {
  .label_text {
    font-size: 140%;
  }

  html {
    display: none;
  }
}

